tests/neg/objects.stk
type A = object {
  def (x: Int) foo(y: Int): Int  // error
}

type B = object {
  def foo(n: Int): Int = n * n // error
} // error

def test = object {
  def (x: Int) foo(y: Int): Int = x + y  // error
}
